--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main>
-      <div class="app">
+      <div class="app mx-auto">
         <div class="top-container">
     <h1>Quiz Game</h1>
     <p class="score">0</p>
