add question counter and fix score counter issue

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
       <div class="app mx-auto">
         <div class="top-container">
     <h1>Quiz Game</h1>
-    <p class="score">0</p>
+    <p class="score">Score: 0</p>
+    
   </div>
     <fieldset>
       
